--- a/app/styles/gameTable.scss
+++ b/app/styles/gameTable.scss
@@ -1,10 +1,9 @@
 // main style file for importing style files for each module
-#sudoku-game-container {
+#game-table {
   position: relative;
   border-spacing: 0;
-  border: 4px solid #0abb9c;
+  border: 4px solid #1fbad6;
   border-collapse: collapse;
-  display: none;
   color: #686868;
   font-family: Arial, sans-serif;
   font-weight: bold;
