--- a/app/styles/numSelector.scss
+++ b/app/styles/numSelector.scss
@@ -1,6 +1,7 @@
 #numSelector {
   position: absolute;
   width: 50%;
+  display: none;
   background-color: #689fce;
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
