--- a/app/styles/gameTable.scss
+++ b/app/styles/gameTable.scss
@@ -16,6 +16,10 @@
     border: 2px solid #1fbad6;
     padding: 0;
     cursor: pointer;
+
+    &.emptyCell {
+      background-color: #adadad;
+    }
   }
 }
 
