--- a/app/styles/gameTable.scss
+++ b/app/styles/gameTable.scss
@@ -18,7 +18,11 @@
     cursor: pointer;
 
     &.emptyCell {
-      background-color: #adadad;
+      background-color: #b3d4fc;
+    }
+
+    &.fixedCell {
+      color: #1fbad6;
     }
   }
 }
