--- a/app/styles/container.scss
+++ b/app/styles/container.scss
@@ -3,4 +3,43 @@
   max-width: 740px;
   margin: auto;
   margin: 20px auto;
+
+  header {
+    background-color: rgba(0,0,0,.7);
+    padding: 10px;
+    color: $line-color;
+
+    .difficulty-select {
+      width: 120px;
+      float: left;
+
+      label {
+        color: #ffffff;
+        font-size: 20px;
+        display: block;
+        margin-top: 10px;
+      }
+
+      select {
+        @include setting();
+      }
+    }
+
+    .options {
+      width: 100px;
+      float: right;
+
+      #reset-game {
+        @include setting();
+      }
+
+      #show-solution {
+        @include setting();
+      }
+    }
+
+    .clearfix {
+      clear: both;
+    }
+  }
 }
