--- a/app/styles/numSelector.scss
+++ b/app/styles/numSelector.scss
@@ -1,5 +1,4 @@
-$border-color: #1fbad6;
-$primary-color: #070716;
+
 
 #numSelector {
   position: absolute;
@@ -10,7 +9,7 @@ $primary-color: #070716;
   cursor: pointer;
   z-index: 500;
   text-align: center;
-  border: 2px solid $border-color;
+  border: 2px solid $line-color;
 
   .pad {
     line-height: 40px;
@@ -26,12 +25,12 @@ $primary-color: #070716;
     width: 32%;
 
     &:hover {
-      color: $border-color;
+      color: $line-color;
     }
 
     >div {
       margin: 10px 25px;
-      border-bottom: 2px solid $border-color;
+      border-bottom: 2px solid $line-color;
     }
   }
 
