--- a/app/styles/gameTable.scss
+++ b/app/styles/gameTable.scss
@@ -15,14 +15,15 @@
     font-size: 2.0em;
     border: 2px solid #1fbad6;
     padding: 0;
-    cursor: pointer;
 
     &.emptyCell {
+      cursor: pointer;
       background-color: #b3d4fc;
     }
 
     &.fixedCell {
       color: #1fbad6;
+      cursor: not-allowed;
     }
   }
 }
