--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -21,3 +21,25 @@ $break-small: 400px;
   -webkit-appearance: none;
   cursor: pointer;
 }
+
+#sudoku-game-container {
+  .settings {
+    box-sizing: border-box;
+    position: relative;;
+    display: block;
+    width: 100%;
+    height: 32px;
+    margin-top: 5px;
+    padding: 8px;
+    background-color: #070716;
+    border: 2px solid #1fbad6;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
+    -webkit-appearance: none;
+    cursor: pointer;
+  }
+}
